<resources>
    <string name="app_name">Weather</string>
    <string name="c">C</string>
    <string name="test_city">LONDON, UK</string>
    <string name="test_weather">CLOUDY</string>
    <string name="wind_flow">Wind flow</string>
    <string name="test_wind_flow">78</string>
    <string name="perception">Perception</string>
    <string name="humidity">Humidity</string>
    <string name="test_perception">52</string>
    <string name="test_humidity">89</string>
    <string name="sunday">Sun</string>
    <string name="test_big_degrees">0°</string>
    <string name="test_small_degree">13°/5°</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
</resources>