<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">
        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Text.Header"/>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:src="@drawable/big_cloudy"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_big_degrees"
                style="@style/Text.Degrees"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                style="@style/Text"
                android:textSize="27sp"
                android:paddingHorizontal="5dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_city"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_weather"
            android:textAlignment="center"
            android:paddingBottom="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <include android:layout_weight="1"
            android:id="@+id/wind_flow"
            layout="@layout/today_extra"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"/>
        <include android:layout_weight="1"
            android:id="@+id/perception"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/today_extra"
            android:layout_margin="5dp"/>
        <include android:layout_weight="1"
            android:id="@+id/humidity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            layout="@layout/today_extra"/>

    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:layout_margin="5dp"
        android:layout_gravity="center_vertical"
        android:translationZ="5dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <include
            android:id="@+id/sun"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/mon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/tue"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/wed"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/thu"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/fri"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
        <include
            android:id="@+id/sat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            layout="@layout/next_day"
            android:layout_margin="5dp"
            />
    </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>